--- a/raspberry/package.json
+++ b/raspberry/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.157.0",
-    "opencv": "^6.0.0"
+    "opencv": "^6.0.0",
+    "pi-gpio": "0.0.8"
   }
 }
