--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-materialize": "^1.0.15",
     "react-router": "^3.2.0",
     "react-webcam": "^0.2.0",
-    "socket.io": "^2.0.3",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "tracking": "^1.1.3",
     "webcamjs": "^1.0.23",
     "webpack": "^3.6.0"
