--- a/raspberry/package.json
+++ b/raspberry/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.157.0",
+    "express": "^4.16.2",
     "opencv": "^6.0.0",
-    "rpi-gpio": "^0.9.1"
+    "rpi-gpio": "^0.9.1",
+    "socket.io": "^2.0.4"
   }
 }
