--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-materialize": "^1.0.15",
     "react-router": "^3.2.0",
     "react-webcam": "^0.2.0",
+    "semantic-ui-css": "^2.2.12",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "tracking": "^1.1.3",
